# OpenDeezer

./: CHANGELOG.md  README.md  SECURITY.md  go.mod  go.sum
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/workflows/: android.yml  cflite-cron.yml  cflite-pr.yml  ci.yml  release.yml
cmd/opendeezer/: main.go
cmd/opendeezer-mcp/: main.go  main_test.go  tools.go
corelib/: connect.go  deezercore.go  services.go  webremote.go
docs/: FUZZING.md
examples/connect/: main.go
examples/download/: main.go
examples/host/: main.go
examples/remote-server/: main.go
examples/search/: main.go
gui/android/: .gitignore  README.md  build.sh  settings.gradle.kts
gui/android/app/: build.gradle.kts  proguard-rules.pro
gui/android/app/libs/: .gitkeep
gui/android/app/src/main/: AndroidManifest.xml
gui/android/app/src/main/java/fr/cyclooo/opendeezer/: AppViewModel.kt  MainActivity.kt  OpenDeezerApp.kt  Routes.kt
gui/android/app/src/main/java/fr/cyclooo/opendeezer/data/: Prefs.kt
gui/android/app/src/main/java/fr/cyclooo/opendeezer/engine/: Engine.kt  Models.kt
gui/android/app/src/main/java/fr/cyclooo/opendeezer/player/: PlayerController.kt
gui/android/app/src/main/java/fr/cyclooo/opendeezer/ui/components/: Components.kt  PlayerBar.kt  UpdateBanner.kt
gui/android/app/src/main/java/fr/cyclooo/opendeezer/ui/screens/: ChartsScreen.kt  ConnectDialog.kt  EpisodesScreen.kt  HomeScreen.kt  LoginScreen.kt  LyricsScreen.kt  NowPlayingScreen.kt  PlaylistsScreen.kt  PodcastsScreen.kt  PremiumGateScreen.kt  QueueScreen.kt  SearchResultsList.kt  SearchScreen.kt  SettingsScreen.kt  TrackListScreen.kt
gui/android/app/src/main/java/fr/cyclooo/opendeezer/ui/theme/: Theme.kt
gui/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
gui/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
gui/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gui/android/app/src/mobile/: AndroidManifest.xml
gui/android/app/src/tv/: AndroidManifest.xml
gui/android/app/src/tv/java/fr/cyclooo/opendeezer/tv/: TvActivity.kt  TvApp.kt  TvComponents.kt  TvLoginScreen.kt  TvRootScreen.kt
gui/android/app/src/tv/res/drawable/: tv_banner.xml
gui/gnome/: meson.build
gui/gnome/data/: opendeezer.gresource.xml
gui/gnome/src/: main.c
gui/ios/: .gitignore  build.sh  project.yml
gui/ios/Resources/: Info.plist
gui/ios/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
gui/ios/Sources/OpenDeezer/: AddToPlaylistSheet.swift  AlbumDetailView.swift  ArtistView.swift  ChartsView.swift  DevicePickerView.swift  Engine.swift  FlowView.swift  HomeView.swift  KeychainStore.swift  LibraryStore.swift  LibraryView.swift  LiquidGlass.swift  LoginView.swift  LyricsView.swift  MainTabView.swift  MiniPlayerView.swift  Models.swift  NowPlayingView.swift  OpenDeezerApp.swift  Palette.swift  PlayerController.swift  PlaylistDetailView.swift  PodcastsView.swift  PremiumGateView.swift  RemoteArtwork.swift  RootView.swift  SearchView.swift  SessionStore.swift  SettingsView.swift  UpdateBanner.swift  UpdateStore.swift
gui/kde/: CMakeLists.txt  README.md  build.sh  resources.qrc
gui/kde/src/: logindialog.cpp  logindialog.h  loginhelper.cpp  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
gui/linux/: build.sh
gui/macos/: .gitignore  Info.plist  Makefile  Package.swift  README.md
gui/macos/Clib/: libdeezercore-amd64.h  libdeezercore-arm64.h  module.modulemap
gui/macos/Sources/DeezerGUI/: App.swift  AppState.swift  Bridge.swift  Models.swift  Palette.swift  PlayerBar.swift
gui/macos/Sources/OpenDeezer/: App.swift  AppState.swift  Bridge.swift  LyricsArtistViews.swift  Models.swift  PlayerBar.swift  Settings.swift
gui/windows/: .gitignore  App.xaml  App.xaml.cs  DeezerCore.cs  Interop.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  OpenDeezer.csproj  OpenDeezer.vcxproj  README.md  app.manifest  build.ps1  libdeezercore.def
gui/windows/src/: main.cpp
internal/audio/: buffers.go  device.go  flac.go  fuzz_test.go  output_malgo.go  output_oto.go  player.go
internal/config/: config.go  config_test.go
internal/control/: client.go  control.go  control_test.go
internal/control/webui/: remote.html
internal/deezer/: client.go  flow.go  fuzz_test.go  library.go  models.go  podcast.go  podcast_test.go
internal/discord/: discord.go
internal/discovery/: discovery.go  discovery_test.go  sockopt_unix.go  sockopt_windows.go
internal/log/: log.go  log_test.go
internal/mpris/: mpris.go  mpris_linux.go
internal/queue/: queue.go  queue_test.go
internal/ui/: config.go  control_config_test.go  items.go  model.go  remote.go  remote_test.go  update.go  updatecheck.go  view.go  webremote.go
mobile/: odmobile.go
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD
packaging/flatpak/: org.opendeezer.OpenDeezer.kde.yaml  org.opendeezer.OpenDeezer.unified.yaml  org.opendeezer.OpenDeezer.yaml
packaging/homebrew/: opendeezer.rb
packaging/winget/: Cycl0o0.OpenDeezer.installer.yaml  Cycl0o0.OpenDeezer.locale.en-US.yaml  Cycl0o0.OpenDeezer.yaml
sdk/: README.md  doc.go
sdk/connect/: connect.go  connect_test.go  doc.go  host.go
sdk/control/: control.go  control_test.go  doc.go
sdk/deezer/: client.go  client_test.go  doc.go  download.go
sdk/player/: doc.go  player.go
